* removed debug verification * changed tags at lets-chat component to sustain semantics * fix letschat component align with header * add preparation cases collection for repeating * add background color iteration of cases content * implemented cases repeating at cases and home page

--- a/src/less/pages/cases.page.less
+++ b/src/less/pages/cases.page.less
@@ -1,6 +1,13 @@
 #cases {
     @dft-cases-transition-behavior: 500ms ease-out;
     position: relative;
+    // background colors for case content on hover
+    @hover-turquoise-bg: #00B3E4;
+    @hover-green-bg: #20c997;
+    @hover-orange-bg: #fd7e14;
+    @hover-purple-bg: #9c27b0;
+    @hover-red-bg : #9c27b0;
+    @hover-blue-bg: cornflowerblue;
 
     .cases-list {
         // indent on mobile corresponding to design
@@ -26,7 +33,9 @@
             }
             .case-content {
                 background-color: @white;
+                // set content over image on hover
                 position: relative;
+                z-index: 1;
                 transition: @dft-cases-transition-behavior;
                 // indent on mobile corresponding to design
                 @media @lsmscreen {
@@ -74,23 +83,23 @@
             }
             &:hover {
                 .case-content {
-                    // set content over image on hover
-                    z-index: 1;
-                    background-color: #00B3E4;
+                    &.hover-turquoise-bg {
+                        background-color: @hover-turquoise-bg;
+                    }
                     &.hover-green-bg {
-                        background-color: #20c997;
+                        background-color: @hover-green-bg;
                     }
                     &.hover-orange-bg {
-                        background-color: #fd7e14;
+                        background-color: @hover-orange-bg;
                     }
                     &.hover-purple-bg {
-                        background-color: #9c27b0;
+                        background-color: @hover-purple-bg;
                     }
                     &.hover-red-bg {
-                        background-color: #bd2130;
+                        background-color: @hover-red-bg;
                     }
                     &.hover-blue-bg {
-                        background-color: cornflowerblue;
+                        background-color: @hover-blue-bg;
                     }
                     color: @white;
                     transition: @dft-cases-transition-behavior;
@@ -102,6 +111,7 @@
                     h2 {
                         color: @white;
                     }
+                    // set white color of line under case content
                     &:after {
                         border-bottom: 3px solid white;
                     }
